Implementacion funcionalidad 2